# vex-manager

./: README.md  pyproject.toml  vex-manager.json
tests/core/: file_manager.py
tests/gui/: file_explorer_tree_widget.py  file_explorer_widget.py  preferences_ui.py  vex_edit_widget.py  vex_manager_ui.py  vex_plain_text_edit.py
vex_manager/: __init__.py
vex_manager/config/: __init__.py  color_scheme.py  vex_syntaxis.py  wrangle_nodes.py
vex_manager/core/: __init__.py  file_manager.py  houdini_node_manager.py  vex_manager.py
vex_manager/gui/: file_explorer_tree_widget.py  file_explorer_widget.py  preferences_ui.py  vex_editor_widget.py  vex_manager_ui.py  vex_plain_text_edit.py  vex_syntax_highlighter.py
vex_manager/utils/: __init__.py  utils.py
